IE 🐛 fix 'About Us' image stretching

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -767,18 +767,24 @@ ABOUT US
 	justify-content:space-between;
 	align-items:center;
 	margin: 50px 0;
+
 	@include breakpoint(tabletsmallest) {
 		margin: 30px 0;
 		flex-direction:column;
-
 	}
-	img {
+	.image-wrapper {
+		font-size: 0;
 		margin: 0 50px 0 0;
-		width:30%;
+		width: 30%;
+
 		@include breakpoint(tabletsmallest) {
 			margin: 0 auto 30px;
-			width:70%;
+			width: 70%;
 		}
+	}
+
+	p {
+		max-width: 70%;
 	}
 }
 
